[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "RampantTrackGeneration"
version = "0.0.1.0.0"
authors = [
  { name="Javas Shankar", email="javasshankar@gmail.com" },
]
description = "Rampant on the Tracks's Track generation logic, leveraging Voronout and optimized for a web service."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "flask",
  "networkx",
  "numpy",
  "Voronout",
]

[project.urls]
Homepage = ""
Issues = ""